Draft configuration.